<resources>

    <string name="app_name">Dejalist</string>
    
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    
    <string name="nav_checklist">Shopping list</string>
    <string name="nav_all_products">All products</string>
    <string name="nav_products_no_category">Default</string>
    
    <string name="dialogfragment_category_utitled">Untitled</string>
    <string name="dialogfragment_category_save">Save</string>
    <string name="dialogfragment_category_cancel">Cancel</string>
    <string name="dialogfragment_category_name_hint">Category name</string>
    
    <string name="dialogfragment_setproductcategory_title">Choose a category</string>
    
    <string name="menu_main_settings_label">Settings</string>
    <string name="menu_main_about_backup">Backup</string>
    <string name="menu_main_about_restore">Restore</string>
    <string name="menu_main_about_label">About</string>
    
    <string name="menu_products_new_product">New product</string>

    <string name="menu_products_sort_group">Sort by</string>
    <string name="menu_products_sort_az">A-Z</string>
    <string name="menu_products_sort_usage">Often bought</string>
    <string name="menu_products_sort_category">Category</string>
    <string name="menu_products_sort_recent">Recently bought</string>
    
    <string name="menu_checklist_clear">Clear all</string>
    <string name="menu_checklist_clear_checked">Clear checked</string>
    <string name="menu_checklist_sort_group">Sort by</string>
    <string name="menu_checklist_sort_az">A-Z</string>
    <string name="menu_checklist_sort_category">Category</string>
    <string name="menu_checklist_sort_checked">Checked</string>
    
    <string name="menu_cab_products_set_category">Set category</string>
    <string name="menu_cab_products_share">Share</string>
    <string name="menu_cab_products_edit">Edit</string>
    <string name="menu_cab_products_delete">Delete</string>
    <string name="menu_cab_products_title">%1$d selected</string>
    
    <string name="toast_no_image_to_share">There is no image to share</string>
    <string name="share_image_data_display_name">Dejalist product image</string>
    
    <string name="dialog_share_product">Share product image to</string>
    
    <string name="menu_cab_checklist_remove">Remove</string>
    <string name="menu_cab_checklist_title">%1$d selected</string>
    
    <string name="category_none_name">Default</string>
    <string name="category_new">New category</string>
    <string name="menu_categories_edit">Edit category</string>
    <string name="menu_categories_delete">Delete category</string>
    
    <string name="product_activity_title">Product</string>
    <string name="menu_product_done">Done</string>
    <string name="menu_product_discard">Discard</string>
    <string name="toast_product_no_name">Please enter product name</string>
    <string name="toast_product_failed_save">Sorry, I could not save the product :( Please try again later.</string>
    
    <string name="crop_activity_title">Edit picture</string>
    <string name="menu_crop_done">Done</string>
    <string name="menu_crop_discard">Discard</string>
    <string name="menu_crop_image">Pick image</string>
    <string name="menu_crop_camera">Take photo</string>
    <string name="menu_crop_rotate_ccw">Rotate left</string>
    <string name="menu_crop_rotate_cw">Rotate right</string>
    <string name="toast_crop_img_load_failed">Could not load the image!</string>
    <string name="toast_crop_not_local_image">Please select a local image!</string>
    <string name="toast_crop_no_image">No image selected!</string>
    <string name="toast_crop_save_failed">Failed to save image!</string>
    <string name="dialog_crop_title">Saving...</string>
    <string name="dialog_crop_message">Compressing and saving image</string>
    <string name="dialog_crop_cancel">Cancelled saving image!</string>
    <string name="et_product_name_hint">Product name</string>
    <string name="tv_product_header_category_spinner">Category</string>
    
    <string name="undobar_product_deleted_message">Products deleted.</string>
    <string name="undo">Undo</string>
    <string name="tv_checklist_empty">Shopping time?\nAdd some products to the list first.</string>
    <string name="tv_gallery_empty">No products here yet!\nTap the plus above to add some.</string>
    <string name="tv_product_category_header">PRODUCT CATEGORY</string>
    <string name="tv_product_name_header">PRODUCT NAME</string>
    <string name="tv_product_picture_hint">Take new or pick an existing picture</string>
    
    <string name="about_activity_title">About</string>
    
    <string-array name="sample_categories">
        <item>Fruits</item>
        <item>Vegetables</item>
        <item>Sweets</item>
        <item>Drinks</item>
    </string-array>
    
    <string name="toast_backup_started">Backing up...</string>
    <string name="backup_notif_title">Dejalist backup</string>
    <string name="backup_notif_text">Exporting products in progress</string>
    <string name="backup_notif_title_failed">Dejalist backup failed</string>
    <string name="backup_notif_text_finished">Backup complete</string>
    <string name="toast_restore_started">Restoring...</string>
    <string name="restore_notif_title">Dejalist restore</string>
    <string name="restore_notif_text">Importing products in progress</string>
    <string name="restore_notif_title_failed">Dejalist restore failed</string>
    <string name="restore_notif_text_finished">Restore complete</string>
    
    <string name="backup_confirm_title">Dejalist backup</string>
    <string name="backup_confirm_message">This will export all your products and categories into a folder on your external memory. Any backup that is already there will be overwitten. Would you like to proceed?</string>
    <string name="backup_confirm_button_positive">Backup</string>
    <string name="backup_confirm_button_negative">Cancel</string>
    <string name="restore_confirm_title">Dejalist restore</string>
    <string name="restore_confirm_message">This will import all products and categories from the backup folder on your external memory. Existing categories and products will remain unchanged. Would you like to proceed?</string>
    <string name="restore_confirm_button_positive">Restore</string>
    <string name="restore_confirm_button_negative">Cancel</string>
    
    <string name="br_error_backup_folder_cannot_create">Could not create the backup folder with name <i>DejalistBackup</i>.</string>
    <string name="br_error_backup_folder_nomedia_create">Could not prepare the backup folder with name <i>DejalistBackup</i>.</string>
    <string name="br_error_backup_json_category">Error backing up a category.</string>
    <string name="br_error_backup_json_product">Error backing up a product.</string>
    <string name="br_error_saving_backup">Error saving backup to storage.</string>
    <string name="br_error_saving_images">Error saving product image to storage.</string>
    <string name="br_error_restore_file_data">Error reading backup from storage.</string>
    <string name="br_error_restore_json_data">Error reading backup.</string>
    <string name="br_error_import_images">Error reading image from storage.</string>
    <string name="br_error_restore_json_product">Error importing product.</string>
    <string name="br_error_restore_json_category">Error importing category.</string>
</resources>
