<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_products_sort"
        android:icon="@drawable/ic_action_sort"
        android:menuCategory="secondary"
        android:orderInCategory="1"
        android:showAsAction="always"
        android:title="@string/menu_products_sort_group">
        <menu>
            <group
                android:id="@+id/menu_products_sort_group"
                android:checkableBehavior="single" >
                <item
                    android:id="@+id/menu_products_sort_az"
                    android:checked="true"
                    android:title="@string/menu_products_sort_az"/>
                <item
                    android:id="@+id/menu_products_sort_recent"
                    android:title="@string/menu_products_sort_recent"/>
                <item
                    android:id="@+id/menu_products_sort_usage"
                    android:title="@string/menu_products_sort_usage"/>
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/menu_new_product"
        android:icon="@drawable/ic_action_new_product"
        android:menuCategory="secondary"
        android:orderInCategory="2"
        android:showAsAction="always"
        android:title="@string/menu_products_new_product"/>
    <item
        android:id="@+id/menu_categories"
        android:menuCategory="secondary"
        android:orderInCategory="3"
        android:showAsAction="never"
        android:title="@string/menu_categories_group">
        <menu>
            <group
                android:id="@+id/menu_categories_group"
                android:checkableBehavior="none" >
                <item
                    android:id="@+id/menu_categories_edit"
                    android:title="@string/menu_categories_edit"/>
                <item
                    android:id="@+id/menu_categories_delete"
                    android:title="@string/menu_categories_delete"/>
            </group>
        </menu>
    </item>

</menu>