<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" >

    <FrameLayout
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="4dp" >

        <TextView
            android:id="@+id/tv_product_picture_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="center_horizontal"
            android:text="@string/tv_product_picture_hint"
            android:textColor="?android:attr/textColorHint" />

        <ImageView
            android:id="@+id/iv_product_picture"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:src="@drawable/product_no_pic_big" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:divider="?android:attr/dividerVertical"
        android:dividerPadding="8dp"
        android:orientation="horizontal"
        android:showDividers="middle" >

        <ImageButton
            android:id="@+id/ib_product_change_image"
            style="?android:borderlessButtonStyle"
            android:layout_width="64dp"
            android:layout_height="48dp"
            android:contentDescription="@string/menu_crop_image"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:src="@drawable/ic_action_image" />

        <ImageButton
            android:id="@+id/ib_product_change_camera"
            style="?android:borderlessButtonStyle"
            android:layout_width="64dp"
            android:layout_height="48dp"
            android:contentDescription="@string/menu_crop_camera"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:src="@drawable/ic_action_camera" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:paddingTop="4dp"
        android:text="@string/tv_product_name_header"
        android:textColor="?android:attr/textColorHint" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="4dp"
        android:background="?android:attr/dividerHorizontal" />

    <EditText
        android:id="@+id/et_product_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/et_product_name_hint"
        android:inputType="textCapSentences"
        android:scrollHorizontally="true"
        android:singleLine="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
		android:layout_marginTop="16dp"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:paddingTop="4dp"
        android:text="@string/tv_product_category_header"
        android:textColor="?android:attr/textColorHint" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="4dp"
        android:background="?android:attr/dividerHorizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="?android:attr/dividerVertical"
        android:dividerPadding="8dp"
        android:showDividers="middle" >

        <Spinner
            android:id="@+id/sp_product_category"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/ib_new_category"
            style="?android:borderlessButtonStyle"
            android:layout_width="64dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_action_plus" />
    </LinearLayout>

</merge>